Bug 1759958 - Add comments to clarify the purpose of ScrollAnimationPhysics::Update() and ApplyContentShift(). r=hiro

These methods seem somewhat similar but they have two important differences:

 1. Update() only changes the destination, not the current position.
 2. ApplyContentShift() does not recompute the shape of the animation curve.

Differential Revision: https://phabricator.services.mozilla.com/D141318